# AlienInvaders

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  build_debug.bat  build_debug.sh  build_documentation.sh  build_release.bat  build_release.sh  build_tests.sh
all/: CMakeLists.txt
docker/: Dockerfile  docker-compose.yml  install_deps.sh  startapp.sh
documentation/: CMakeLists.txt
include/alieninvadersretro/: AnimationWindow.h  BoomBox.h  Constants.h  Controls.h  EnemySpaceShip.h  EnemySpaceShipBullet.h  ImguiRendererForWindow.h  MainWindowHeader.h  PlayerStatsAndScoresWindow.h  RandomParticlesGenerator.h  SpaceShip.h  SpaceShipBullet.h  StructuresAndOtherFunctions.h  VirtualBullet.h  VirtualEntity.h  VirtualSpaceShip.h  VirtualWindow.h
include/asio-net/: asioheader.hpp
main_libraries/: CMakeLists.txt
main_libraries/asio-net/: asiofiles.cpp
main_libraries/imgui/: imgui_tables.cpp  imgui_widgets.cpp
main_libraries/imgui-sfml/: imgui-SFML.cpp
main_sources/: CMakeLists.txt
main_sources/source/: AnimationWindowSource.cpp  BoomBoxSource.cpp  Constants.cpp  Controls.cpp  EnemySpaceShipSource.cpp  ImguiRendererForWindow.cpp  MainThread.cpp  MainWindowSource.cpp  PlayerStatsAndScoresWindow.cpp  SpaceShipSource.cpp  VirtualEntity.cpp  VirtualSpaceShip.cpp  VirtualWindowSource.cpp
res/: sfml-audio.exp  sfml-audio.lib  sfml-graphics.exp  sfml-graphics.lib  sfml-network.exp  sfml-network.lib  sfml-system.exp  sfml-system.lib  sfml-window.exp  sfml-window.lib
source/: main_lib.cpp
source/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_stdlib.cpp
standalone/: CMakeLists.txt
standalone/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp
standalone/imgui_sfml/: imgui-SFML.cpp
standalone/source/: AnimationWindowSource.cpp  BoomBoxSource.cpp  EnemySpaceShipSource.cpp  MainThread.cpp  MainWindowSource.cpp  PlayerStatsAndScoresWindow.cpp  SpaceShipSource.cpp  VirtualEntitySource.cpp
test/: CMakeLists.txt
test/source/: main.cpp
vs_community/AlienInvaders/: AlienInvaders.sln
vs_community/AlienInvaders/ConsoleApplication1/: ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  Player.cpp  Player.h  PlayerSelectorWindow.cpp  PlayerSelectorWindow.h
vs_community/AlienInvaders/ConsoleApplication1/Debug/: vc143.idb
vs_community/AlienInvaders/ConsoleApplication1/Debug/ConsoleA.bb6bb1f5.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ConsoleApplication1.lastbuildstate
vs_community/AlienInvaders/ConsoleApplication1/x64/Debug/: vc143.idb
vs_community/AlienInvaders/ConsoleApplication1/x64/Debug/ConsoleA.bb6bb1f5.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ConsoleApplication1.lastbuildstate
vs_community/AlienInvaders/ConsoleApplication1/x64/Release/ConsoleA.bb6bb1f5.tlog/: ConsoleApplication1.lastbuildstate
vs_community/AlienInvadersVSC/: AlienInvadersVSC.sln
vs_community/AlienInvadersVSC/AlienInvadersVSC/: AlienInvadersVSC.vcxproj  AlienInvadersVSC.vcxproj.filters
